# AI-Powered-Financial-News-Intelligence-System

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
data/: mock_news.json  stock_mappings.json
demo/: cli.py
scripts/: benchmark.py  ingest_news.py  test_full_application.py
src/: __init__.py
src/agents/: __init__.py  deduplication_agent.py  entity_extraction_agent.py  ingestion_agent.py  query_agent.py  stock_impact_agent.py  storage_agent.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/core/: __init__.py  config.py  graph.py  state.py
src/database/: __init__.py  models.py  sql_db.py  vector_db.py
src/services/: __init__.py  embedding_service.py  llm_service.py  ner_service.py  stock_mapper.py
src/utils/: __init__.py  text_processing.py  validators.py
tests/: __init__.py  test_agents.py  test_deduplication.py  test_entity_extraction.py  test_integration.py  test_query.py
